# Capstone_AI_037

./: .gitignore  .nojekyll  DEPLOYMENT.md  LPDDR5_IMPLEMENTATION.md  README.md  TESTING.md  index.html  package.json  power_metrics.csv  requirements.txt  test_regression.py  vercel.json  visualize_power.py
core/: LPDDR5_IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  setup.py  test_regression.py
core/src/: __init__.py  component_model.py  core_model.py  ddr5.py  dimm.py  interface_model.py  lpddr5.py  lpddr5_core_model.py  lpddr5_interface_model.py  main.py  parser.py  visualizer.py
core/tests/: __init__.py  test_core_model.py  test_ddr5.py  test_parser.py
core/verif/: membench.cpp  memory.csv  profile_model.py  run_mlc_and_log.py  trim_hwinfo_log.py  verif.md  verif.py
core/verif/baseline/: power_output_baseline.json
core/verif/drampower/: calculate_power.py  compare_breakdown.py  ddr5.json  drampower_micron_16gb_ddr5_6400_x8.json  plot_scaling.py  readme.md  run_trace_power.sh  verification_plan.md
core/verif/mlc_v3.12/Windows/: mlcdrv.sys
core/verif/test_inputs/: 100_read_power_bw68.97_latency258.csv  invalid_timing_value.json  missing_vdd.json  rw_r_idle_test_results_raw.csv  testlist.txt
core/verif/test_inputs/100_read_test/: 100_read_power_bw68.97_latency258_workload.json  testspec.json
core/verif/test_inputs/50_50_rw_test/: 50_50_rw_power_bw75.98_latency515ns.csv  50_50_rw_power_bw75.98_latency515ns_workload.json  testspec.json
core/verif/test_inputs/66_33_rw_test/: 66_33_rw_power_bw65.71_latency548ns.csv  testspec.json  (+1 more)
core/visualization/: plot_empirical_data.py
core/workloads/: ddr5.json  dram_params.json  micron_16gb_ddr5_4800_x8_spec.json  micron_16gb_ddr5_6400_x8_spec.json  micron_lpddr5_8gb_7500_x16_spec.json  samsung_16gb_ddr5_4800_x8_spec.json  skhynix_16gb_ddr5_4800_x8_spec.json  skhynix_32gb_ddr5_4800_x8_spec.json  skhynix_8gb_ddr5_4800_x16_spec.json  workload.json
(+193 files in other folders)
